# Disal_esp32

./: CMakeLists.txt  Disal_ESP32.sln  Disal_ESP32.vgdbproj  sdkconfig  sdkconfig.old
components/LovyanGFX/examples/Advanced/LVGL_PlatformIO/src/: lv_conf.h
components/LovyanGFX/src/lgfx/v1/misc/: pixelcopy.cpp
components/espressif__button/: button_gpio.c  iot_button.c
components/espressif__esp_lvgl_port/src/lvgl8/: esp_lvgl_port_knob.c
components/espressif__esp_lvgl_port/src/lvgl9/: esp_lvgl_port_knob.c
components/espressif__knob/: iot_knob.c
components/lvgl/: lv_conf.h
components/lvgl/src/display/: lv_display.c
components/lvgl/src/misc/: lv_assert.c
components/m5dial/: README.md  idf_component.yml  m5dial.c
design/: hyrel_logo.c  logo.c
document/: 300440 esp32 S3 round lcd module.AD_PRT  300440 esp32 S3 round lcd module.stl  Properties
main/: CMakeLists.txt  RevisionHistory.h  config.h  main.c  main.h
main/button/: button.c  button.h
main/devices/: LCD_GC9A01.h  display.c  display.h
main/encoder/: encoder.c  encoder.h
main/gpio/: gpio.c  gpio.h
main/lcd/: lcd.c  lcd.h
main/ledc/: ledc.c  ledc.h
main/pcnt/: pcnt.c  pcnt.h
main/task_manager/: task_manager.c  task_manager.h
main/tone/: tone.c  tone.h
main/ui/: ui-control.c  ui-control.h  ui-diagnostics.c  ui-diagnostics.h  ui-helpers.c  ui-helpers.h  ui-home.c  ui-home.h  ui-pcnt.c  ui-pcnt.h  ui-settings.c  ui-settings.h  ui-splash copy.c  ui-splash.c  ui-splash.h  ui.c  ui.h
main/ui/font/: mono_regular_24.c
main/utils/: utils.c  utils.h
main/wifi/: wifi.c  wifi.h
