idf_component_register(
                SRCS
                	main.c
                	devices/display.c
					wifi/wifi.c
                	ui/ui.c
                    ui/ui-splash.c
                	ui/images/btn_about.c
                	ui/images/copyright.c
                	ui/images/pct_ge.c
                    ui/images/pctge_mark.c
                	ui/images/btnhome-01.c
                	ui/images/btnhome-02.c
                	ui/images/btnhome-03.c
                	ui/images/btnhome-04.c
                	ui/images/btnhome-06.c
                	ui/images/folder.c
                	ui/images/pct.c
                    ui/images/wifi.c
                    ui/images/meg.c
                    ui/images/secs.c
                    ui/images/simple.c
                	ui/images/bluetooth.c
                	ui/images/settings.c
                	ui/images/variables.c
                	ui/images/btnhome-05.c
                	ui/images/btnhome-07.c
                	ui/images/btnhome-08.c
                	ui/images/controllers.c
                	ui/images/fan.c
                	ui/images/heater.c
                	ui/images/mtr.c
                    ui/images/plot.c
                    ui/images/secs.c
                	ui/font/en_12.c
                	ui/font/en_16.c
                	ui/font/en_bold_16.c
                	ui/font/en_bold_20.c
                	ui/font/en_bold_24.c
                	ui/font/en_bold_30.c
                	ui/font/mono_bold_16.c
                	ui/font/mono_bold_24.c
                	ui/font/mono_bold_28.c
                	ui/font/mono_bold_32.c
                	ui/font/mono_digital_20.c
                	ui/font/mono_digital_24.c
                	ui/font/mono_regualr_12.c
                	ui/font/mono_regualr_16.c
                	ui/font/mono_regualr_20.c
                	ui/font/mono_regualr_14.c                	
                INCLUDE_DIRS "."
                REQUIRES
                	LovyanGFX
                	lvgl
                	app_update
                	esp_event
                	esp_timer
                	spi_flash
                	esp_partition
                	esp_hw_support
                	bt
                	fatfs
                	sdmmc)
component_compile_options(-fexceptions -x c++ -O0 -Wno-shift-negative-value -Wno-missing-field-initializers -Wno-write-strings -Wno-error=format)
set_property(TARGET ${COMPONENT_TARGET} PROPERTY CXX_STANDARD 17)
