idf_component_register(
                SRCS
                	main.c
                	devices/display.c
					wifi/wifi.c
					gpio/gpio.c
					button/button.c
					encoder/encoder.c
					ledc/ledc.c
					tone/tone.c
					task_manager/task_manager.c
                	ui/ui.c
					ui/ui-helpers.c
                    ui/ui-splash.c
					ui/images/hyrel_logo.c
					ui/font/en_12.c
                	ui/font/en_16.c
                	ui/font/en_bold_16.c
                	ui/font/en_bold_20.c
                	ui/font/en_bold_24.c
                	ui/font/en_bold_30.c
                	ui/font/mono_bold_16.c
                	ui/font/mono_bold_24.c
                	ui/font/mono_bold_28.c
                	ui/font/mono_bold_32.c
                	ui/font/mono_digital_20.c
                	ui/font/mono_digital_24.c
                	ui/font/mono_regualr_12.c
                	ui/font/mono_regualr_16.c
                	ui/font/mono_regualr_20.c
                	ui/font/mono_regualr_14.c                	
                INCLUDE_DIRS "."
                REQUIRES
                	LovyanGFX
                	lvgl
                	app_update
                	esp_event
                	esp_timer
                	spi_flash
                	esp_partition
                	esp_hw_support
                	bt
                	fatfs
                	sdmmc)
component_compile_options(-fexceptions -x c++ -O0 -Wno-shift-negative-value -Wno-missing-field-initializers -Wno-write-strings -Wno-error=format)
set_property(TARGET ${COMPONENT_TARGET} PROPERTY CXX_STANDARD 17)
