idf_component_register(
                SRCS
                	main.c
					lcd/lcd.c
                	wifi/wifi.c
					gpio/gpio.c
					pcnt/pcnt.c
					storage/partition.c
                	storage/nvs.c
					task_manager/task_manager.c
					utils/utils.c
					tone/tone.c
					ledc/ledc.c
                	ui/ui.c
					ui/ui-helpers.c
                    ui/ui-splash.c
					ui/ui-home.c
					ui/ui-pcnt.c
					ui/images/hyrel_logo.c
					ui/font/en_12.c
                	ui/font/en_16.c
                	ui/font/en_bold_16.c
                	ui/font/en_bold_20.c
                	ui/font/en_bold_24.c
                	ui/font/en_bold_30.c
                	ui/font/mono_bold_16.c
                	ui/font/mono_bold_24.c
                	ui/font/mono_bold_28.c
                	ui/font/mono_bold_32.c
                	ui/font/mono_regular_24.c                	
                INCLUDE_DIRS "."
                REQUIRES
					nvs_flash
                	lvgl
					m5dial
                	app_update
                	esp_event
                	esp_timer
                	spi_flash
                	esp_partition
                	esp_hw_support
                	bt
                	fatfs
                	sdmmc)
component_compile_options(-fexceptions -x c++ -O0 -Wno-shift-negative-value -Wno-missing-field-initializers -Wno-write-strings -Wno-error=format)
set_property(TARGET ${COMPONENT_TARGET} PROPERTY CXX_STANDARD 17)
